feat: follow user stories using TDD according to the kata statement